# rust-server

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 000_create_pizzas.sql  001_create_orders.sql  002_alter_orders.sql  003_alter_orders.sql  004_alter_pizza.sql
src/: errors.rs  handlers.rs  helpers.rs  main.rs  models.rs
