[package]
name = "actix2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5",features = ["runtime-actix-native-tls","postgres","time","chrono"]}
actix-web = "4.0.1"
dotenv = "0.15.0"
include_dir = "0.7.2"
sqlx-pg-migrate = "1.0"
serde = "1.0.1"
time = "0.3.9"
chrono = {version="0.4.2",features = ["serde"]}